# JoshNickProjects

./: .gitignore  .gitmodules
JoshProjects/2DCombatSimulator/: 2DCombatSimulator.vcxproj  2DCombatSimulator.vcxproj.filters  GameSystem.cpp  GameSystem.h  Level.cpp  Level.h  Level1.txt  Level2.txt  Level3.txt  Level4.txt  Level5.txt  Level6.txt  Main.cpp  Shop.h  Soldier.cpp  Soldier.h
JoshProjects/ASCIIRogueLike_Josh/ASCIIRogueLike/: ASCIIRogueLike.vcxproj  ASCIIRogueLike.vcxproj.filters  Enemy.cpp  Enemy.h  GameSystem.cpp  GameSystem.h  Level.cpp  Level.h  Level1.txt  Level2.txt  Level3.txt  Level4.txt  Level5.txt  Level6.txt  Level7.txt  Level8.txt  Level9.txt  Main.cpp  Player.cpp  Player.h  SaveManager.cpp  SaveManager.h  Shop.cpp
JoshProjects/FloatList_Josh/FloatList/: FloatList.sln
JoshProjects/GraphicsProject/: GraphicsProject.sln  vcpkg.json
JoshProjects/GraphicsProject/BallGame/: Ball.cpp  Ball.h  BallController.cpp  BallController.h  BallGame.vcxproj  BallGame.vcxproj.filters  BallGameCamera.h  BallRenderer.cpp  BallRenderer.h  Grid.cpp  Grid.h  Main.cpp  MainGame.cpp  MainGame.h  imgui.ini
JoshProjects/GraphicsProject/DialogueSystem/: CMakeLists.txt  DialogueApp.cpp  DialogueApp.h  DialogueAudioEngine.cpp  DialogueAudioEngine.h  DialogueEditor.cpp  DialogueEditor.h  DialogueScreen.cpp  DialogueScreen.h  DialogueSystem.cpp  DialogueSystem.h  DialogueSystem.vcxproj  DialogueSystem.vcxproj.filters  DialogueTreeView.cpp  DialogueTreeView.h  Main.cpp  README.md  dialogue_data.yaml  imgui.ini  imgui_impls.cpp  standalone_main.cpp
JoshProjects/GraphicsProject/DialougeEngine/: DialougeEngine.sln
JoshProjects/InventorySystem_Josh/: Armor.cpp  Armor.h  Inventory.cpp  Inventory.h  InventorySystem_Josh.vcxproj  InventorySystem_Josh.vcxproj.filters  Item.cpp  Item.h  Main.cpp  Potion.cpp  Potion.h  Scroll.cpp  Scroll.h  Weapon.cpp  Weapon.h
NickProjects/2DCombatSim/: 2DCombatSim.sln
NickProjects/InventoryProject/: InventoryProject.sln
NickProjects/graphicsTutorials/: graphicsTutorials.sln  vcpkg.json
(+516 files in other folders)
